--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.1",
   "description": "a reactive element creater",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/StreetYang/cieaf_app.git"
+  },
   "scripts": {
     "build": "esbuild index.js --outfile=demo/cieaf_app.js --bundle --minify --format=iife --global-name=cieaf_app --target=es6 --legal-comments=inline"
   },
